<resources>
    <string name="app_name"><b>Github User\'s Search</b></string>
    <string name="title">Github User\'s Search</string>
    <string name="searchbar_hint">Masukkan Username</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="detail_user"><b>Detail User</b></string>
    <string name="user_unknown">User Unknown</string>
    <string name="favorite_user"><b>Favorite User</b></string>
</resources>